@@ -39,7 +39,7 @@ import org.gjt.sp.util.Log;
 /**
  * Operating system detection routines.
  * @author Slava Pestov
- * @version $Id: OperatingSystem.java,v 1.12 2003/05/10 03:13:54 spestov Exp $
+ * @version $Id: OperatingSystem.java,v 1.13 2003/06/07 21:22:17 spestov Exp $
  * @since jEdit 4.0pre4
  */
 public class OperatingSystem
@@ -78,7 +78,7 @@ public class OperatingSystem
 		
 		return new Rectangle(x,y,w,h);
 	} //}}}
-	
+
 	//{{{ getScreenBounds() method
 	/**
 	 * Returns the bounds of the (virtual) screen that the window should be in
@@ -166,7 +166,7 @@ L2:			for (int j=0; j < gc.length; j++)
 		// Yay, we're finally there
 		return new Rectangle(x,y,w,h);
 	} //}}}
-	
+
 	//{{{ isDOSDerived() method
 	/**
 	 * Returns if we're running Windows 95/98/ME/NT/2000/XP, or OS/2.
